--- a/p411a1-mattgriffiths.ipynb
+++ b/p411a1-mattgriffiths.ipynb
@@ -636,6 +636,8 @@
     "    z = np.zeros(2000)\n",
     "    for i in range(0,2000,1):\n",
     "        z[i] = np.mean(unfaircoin(tosses)[2::1])\n",
+    "    \n",
+    "    #used example histogram code from: http://matplotlib.org/1.2.1/examples/pylab_examples/histogram_demo.html\n",
     "    n, bins, patches = ax.hist(z, buns, normed=1, facecolor='green', alpha=0.75)\n",
     "    bincenters = 0.5*(bins[1:]+bins[:-1])\n",
     "    # add a 'best fit' line for the normal PDF\n",
