--- a/p411a3-mattgriffiths.ipynb
+++ b/p411a3-mattgriffiths.ipynb
@@ -336,9 +336,12 @@
     }
    },
    "source": [
-    "By sliding convolving the 2 time series,\n",
+    "Since integration is a linear operator, expectation value of the sum = sum of the expectation values. So here\n",
     "\\begin{equation}\n",
-    "    R_{xx} = \\frac{1}{T} \\int_{0}^{T} x(t) x( t + \\tau ) dt\n",
+    "    R_{yy} = \\frac{1}{T} \\int_{0}^{T} y(t) y( t + \\tau ) dt = \\delta (\\tau ) \\\\\n",
+    "    R_{xx} = \\frac{1}{T} \\int_{0}^{T} x(t) x( t + \\tau ) dt \\\\\n",
+    "    R_{xx} (\\tau) = \\int_{\\tau - b}^{\\tau } R_{yy} d \\tau = \\int_{\\tau - b}^{\\tau } \\delta (\\tau ) d \\tau \\\\\n",
+    "    R_{xx} (\\tau) = b - | \\tau | , | \\tau | < b\n",
     "\\end{equation}\n"
    ]
   },
